...
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/onboarding_screen_text_bg_up_arrow"
        android:gravity="center"
        android:text="@string/with_cowin_20_you_can"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
...
